# FPT-kVC

./: .gitmodules  CMakeLists.txt  Main.cpp  Main.cu  MainCUDAParallel.cpp  MainCUDAParallel.cu  MainOpenMP.cpp  MainSerial.cpp  MainSimpleParallel.cpp  README.md  VectorUtilities.h  a.out  cudaMain.cpp  dyProg.py  jim.cpp  pendants.csv  simulated_blockmodel_graph_50_nodes.csv  sourceOfTest.txt  txt
.github/workflows/: cmake.yml
CMake/: CPUParallel.cmake  CPUSerial.cmake  FileLists.cmake  FindBoost.cmake  GPU.cmake
CMake/boost/: CMakeLists.txt.in
common/: CSVIterator.cpp  CSVIterator.h  CSVRange.cpp  CSVRange.h  CSVRow.cpp  CSVRow.h
cuda/: .ParallelB1_GPU.cu.swp  COO.cu  CSR.cu  CSR.cuh  CSR_GPU.cu  CSR_GPU.cuh  CUDAUtils.cuh  ConnectednessTest.cu  Graph.cu  Graph.cuh  Graph_GPU.cu  Graph_GPU.cuh  LinearTimeDegreeSort.cu  LinearTimeDegreeSort.cuh  ParallelB1.cu  ParallelB1.cuh  ParallelB1_GPU.cu  ParallelB1_GPU.cuh  ParallelKernelization.cu  SparseMatrix.cu  SparseMatrix.cuh  SparseMatrix_GPU.cu  SparseMatrix_GPU.cuh
gpu/: COO.cpp  COO.cu  COO.cuh  COO.h  CSR.cu  CSR.cuh  Main.cu  SparseMatrix.cu  SparseMatrix.h
hybrid/: COO.cpp  COO.h  CSR.cpp  CSR.h  ConnectednessTest.cpp  Graph.cpp  Graph.h  LinearTimeDegreeSort.cpp  LinearTimeDegreeSort.h  ParallelB1.cpp  ParallelB1.h  ParallelKernelization.cpp  ParallelKernelization.h  SparseMatrix.cpp  SparseMatrix.h
lib/: CSVIterator.cpp  CSVIterator.h  CSVRange.cpp  CSVRow.cpp  CSVRow.h
openmp/: COO.cpp  COO.h  CSR.cpp  CSR.h  DCSR.cpp  DegreeController.h  Graph.cpp  Graph.h  LinearTimeDegreeSort.cpp  LinearTimeDegreeSort.h  ParallelB1.cpp  ParallelB1.h  ParallelBuss.cpp  ParallelBuss.h  ParallelKernelization.cpp  ParallelKernelization.h  SparseMatrix.cpp  SparseMatrix.h
serial/: COO.cpp  COO.h  CSR.cpp  CSR.h  DCSR.cpp  DCSR.h  DegreeController.cpp  DegreeController.h  Graph.cpp  Graph.h  NeighborsBinaryDataStructure.cpp  NeighborsBinaryDataStructure.h  SequentialB1.cpp  SequentialB1.h  SequentialBuss.cpp  SequentialBuss.h  SequentialDFKernelization.cpp  SequentialDFKernelization.h  SequentialDowneyFellows.h  SequentialKernelization.cpp  SequentialKernelization.h  SparseMatrix.cpp  SparseMatrix.h
simpleParallel/: COO.cpp  COO.h  CSR.cpp  CSR.h  ConnectednessTest.cpp  ConnectednessTest.h  Graph.cpp  Graph.h  LinearTimeDegreeSort.cpp  LinearTimeDegreeSort.h  ParallelB1.cpp  ParallelB1.h  ParallelKernelization.cpp  ParallelKernelization.h  SparseMatrix.cpp  SparseMatrix.h
test/: FileList.cmake  GoogleTest.cmake
test/src/: GraphTest.cpp  LinearTimeDegreeSortTest.cpp  ParallelKernelizationTest.cpp
